<resources>
    <string name="app_name">WanAndroid</string>

    <string name="loading">加载中</string>
    <string name="load_failed">加载失败</string>

    <string name="home">首页</string>
    <string name="system">体系</string>
    <string name="project">项目</string>
    <string name="wx">公众号</string>

    <string name="complete_info">请完善信息</string>
    <string name="register">注册</string>
    <string name="password_not_match">密码输入不一致</string>
    <string name="register_success">注册成功</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="input_repassword">请确认密码</string>

    <string name="author">作者:</string>
    <string name="category">分类:</string>

    <string name="collect_list">收藏列表</string>
    <string name="collect_failed">收藏失败</string>
    <string name="uncollect_failed">取消收藏失败</string>
    <string name="hot_key">热搜</string>
    <string name="input_key">请输入搜索关键词</string>

    <string name="settings">设置</string>
    <string name="night_mode">夜间模式</string>
    <string name="feedback">反馈</string>
    <string name="about">关于</string>

    <string name="new_version">发现新版本</string>
    <string name="version">版本</string>
    <string name="size">大小</string>
    <string name="detail">详情</string>
    <string name="later">以后再说</string>
    <string name="update_now">立即更新</string>
    <string name="empty">没有数据</string>
    <string name="download">下载更新</string>
    <string name="downloading">下载中</string>
    <string name="tip">当前为移动网络环境，使用移动流量下载?</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="network_not_connect">网络未连接</string>
    <string name="function">功能介绍</string>
    <string name="function_detail">基于WanAndroid开放API开发的技术文章阅读App。主要功能包括：首页、体系、项目、公众号、搜索、登录、收藏、夜间模式等。</string>

    <string name="none">无</string>
    <string name="author_link_empty">作者和链接不能为空</string>

    <string name="share">分享</string>
    <string name="copy_link">复制链接</string>
    <string name="copy_finish">已复制到剪贴板</string>
    <string name="browser">在浏览器中打开</string>

    <string name="shortcuts_disabled">不可用</string>
    <string name="shortcuts_search">搜索</string>
    <string name="shortcuts_search_full">搜索文章</string>
    <string name="shortcuts_favorite">收藏列表</string>
    <string name="shortcuts_favorite_full">收藏列表</string>


</resources>
